--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.3.0" />
+    <PackageReference Include="Iot.Device.Bindings" Version="2.0.0" />
     <PackageReference Include="Moq.AutoMock" Version="3.1.0" />
     <PackageReference Include="nunit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.0">
@@ -14,6 +15,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+    <PackageReference Include="System.Device.Gpio" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
